# simple-sudoku

./: CMakeLists.txt
Stupid Fast Sudoku Solver/: CMakeLists.txt  Stupid Fast Sudoku Solver.cpp
